docs/deploy/k8s/kingsly-worker-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: kingsly-worker
  name: kingsly-worker
  namespace: kingsly
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kingsly-worker
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kingsly-worker
    spec:
      containers:
      - args:
        - bundle
        - exec
        - clockwork
        - clock.rb
        image: gojekfarm/kingsly:63748ae706584dc5cb8ae624ffc15a3dc487888d
        imagePullPolicy: IfNotPresent
        name: kingsly-worker
        resources:
          limits:
            cpu: "4"
            memory: 16Gi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
