docs/deploy/k8s/kingsly-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kingsly
  name: kingsly
  namespace: kingsly
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: kingsly
  sessionAffinity: None
  type: NodePort
